@@ -1,3 +1,8 @@
+2007-07-25  Alexandre Julliard  <julliard@winehq.org>
+
+	* vc-git.el (vc-git-log-view-mode): Port to the multi-file vc interface.
+	(vc-git-create-snapshot, vc-git-retrieve-snapshot): New functions.
+
 2007-07-25  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
 
 	* ps-print.el (ps-multibyte-buffer): Docstring fix.
